// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appeal-documents upload should render upload form if appeal ID and folder ID are found 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds top-errors-hook"></div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Upload your other new supporting documents</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <div class="govuk-grid-row pins-file-upload" data-next-page-url="/appeals-service/appeal-details/1/appellant-case/add-document-details/1"
            data-form-id="1" data-case-id="1" data-case-reference="APP/Q9999/D/21/351062"
            data-folder-id="1" data-document-type="otherNewDocuments" data-document-stage="appellantCase"
            data-blob-storage-host="https://127.0.0.1:10000/devstoreaccount1" data-blob-storage-container="document-service-uploads"
            data-document-title="other new supporting documents" data-allowed-types="application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-outlook,image/jpeg,image/jpeg,video/mpeg,audio/mpeg,video/mp4,video/quicktime,image/png,image/tiff,image/tiff"
            data-formatted-allowed-types="PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX, MSG, JPG, JPEG, MPEG, MP3, MP4, MOV, PNG, TIF or TIFF">
                <form method="POST" novalidate="novalidate" class="govuk-grid-column-two-thirds"
                data-filenames-in-folder="">
                    <div class="pins-file-upload__container">
                        <div class="govuk-body pins-file-upload__instructions"><span>Each file must be a PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX, MSG, JPG, JPEG, MPEG, MP3, MP4, MOV, PNG, TIF or TIFF and smaller than 25MB.</span><span>The total size of your uploaded files must be smaller than 1GB.</span>
                        </div>
                        <div class="middle-errors-hook">
                            <h2 class="pins-file-upload__container-title">Upload your other new supporting documents</h2>
                            <div class="pins-file-upload__upload">
                                <input class="display--none" id="upload-file-1" accept="application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-outlook,image/jpeg,image/jpeg,video/mpeg,audio/mpeg,video/mp4,video/quicktime,image/png,image/tiff,image/tiff"
                                type="file" name="files" value="Choose file" aria-controls="file-list-1"
                                multiple>
                                <div>
                                    <button type='button' class="pins-file-upload__button govuk-button--secondary"
                                    data-cy="upload-file-button" id="upload-file-button-1">Choose files</button><span class='govuk-body pins-file-upload__dropzone-text'>or drop files</span>
                                </div>
                            </div>
                            <div id="file-list-1">
                                <h2 class="display--sr-only" id="file-list-title-1">List of files to upload</h2>
                                <ul class="pins-file-upload__files-rows" aria-describedby="file-list-title-1"
                                aria-live="polite"></ul>
                            </div>
                        </div>
                    </div>
                    <div class="display--flex">
                        <button type="submit" class="govuk-button pins-file-upload__submit" data-module="govuk-button"
                        id="submit-button-1">Continue</button>
                        <div class="progress-hook"></div>
                    </div>
                </form>
            </div>
        </div>
    </div>
</main>"
`;

exports[`appeal-documents upload should render upload form if appeal ID, folder ID and document ID are found 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds top-errors-hook"></div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Upload an updated document</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <div class="govuk-grid-row pins-file-upload" data-next-page-url="/appeals-service/appeal-details/1/appellant-case/add-document-details/1/0e4ce48f-2d67-4659-9082-e80a15182386"
            data-form-id="1" data-case-id="1" data-case-reference="APP/Q9999/D/21/351062"
            data-folder-id="1" data-document-type="otherNewDocuments" data-document-stage="appellantCase"
            data-blob-storage-host="https://127.0.0.1:10000/devstoreaccount1" data-blob-storage-container="document-service-uploads"
            data-document-id="0e4ce48f-2d67-4659-9082-e80a15182386" data-allowed-types="application/pdf"
            data-formatted-allowed-types="PDF">
                <form method="POST" novalidate="novalidate" class="govuk-grid-column-two-thirds"
                data-filenames-in-folder="">
                    <div class="pins-file-upload__container">
                        <div class="govuk-body pins-file-upload__instructions"><span>The file must be a PDF and smaller than 25MB.</span>
                        </div>
                        <div class="middle-errors-hook">
                            <h2 class="pins-file-upload__container-title">Upload an updated document</h2>
                            <div class="pins-file-upload__upload">
                                <input class="display--none" id="upload-file-1" accept="application/pdf"
                                type="file" name="files" value="Choose file" aria-controls="file-list-1">
                                <div>
                                    <button type='button' class="pins-file-upload__button govuk-button--secondary"
                                    data-cy="upload-file-button" id="upload-file-button-1">Choose file</button><span class='govuk-body pins-file-upload__dropzone-text'>or drop file</span>
                                </div>
                            </div>
                            <div id="file-list-1">
                                <h2 class="display--sr-only" id="file-list-title-1">List of files to upload</h2>
                                <ul class="pins-file-upload__files-rows" aria-describedby="file-list-title-1"
                                aria-live="polite"></ul>
                            </div>
                        </div>
                    </div>
                    <div class="display--flex">
                        <button type="submit" class="govuk-button pins-file-upload__submit" data-module="govuk-button"
                        id="submit-button-1">Continue</button>
                        <div class="progress-hook"></div>
                    </div>
                </form>
            </div>
        </div>
    </div>
</main>"
`;
